--- a/source/index.html
+++ b/source/index.html
@@ -50,11 +50,11 @@
       </button>
     </nav>
     <div class="header-page__image-sedona image-sedona image-sedona--size--big"></div>
-    <div class="header-page__title-block header-title">
+    <div class="header-page__title-block header-title header-title--index">
       <h1 class="header-title__title title">
         Седона - небольшой городок в Аризоне, заслуживающий большего!
       </h1>
-      <p class="header-title__paragraph text">
+      <p class="header-title__paragraph header-title__paragraph--index text">
         Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
       </p>
     </div>
@@ -150,13 +150,13 @@
         <p class="advantage-list__paragraph text">Большинство едет в Гранд Каньон и толпится там</p>
       </li>
     </ul>
-    <section class="main-page__find-hotel find-hotel">
+    <section class="index-page__find-hotel find-hotel">
       <p class="find-hotel__title title title--size--big">Заинтересовались?</p>
       <p class="find-hotel__paragraph text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
         гостиниц в Седоне</p>
       <a class="find-hotel__button link" href="find-hotel.html">Найти гостиницу</a>
     </section>
-    <div class="main-page__map-block map-block">
+    <div class="index-page__map-block map-block">
       <a class="map-block__link link" href="https://goo.gl/maps/g3uw954bJq4YAxxH7"
         aria-label="Ссылка на Седону в гугл картах">
         <img class="map-block__image" src="img/bg-map-mobile@1x.jpg" alt="Седона на карте">
